// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`opening match checkpoints > matches the seeded command, event, visibility, and checkpoint baseline > seed 17 1`] = `
{
  "commands": [
    null,
    {
      "participantId": "scenario-player-one",
      "replaceInstanceIds": [
        "scenario-player-one:deck:17",
      ],
      "type": "confirm-mulligan",
    },
    {
      "participantId": "scenario-player-two",
      "replaceInstanceIds": [
        "scenario-player-two:deck:21",
      ],
      "type": "confirm-mulligan",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-two",
      "type": "dev-set-mana",
    },
    {
      "cardInstanceId": "missing",
      "participantId": "scenario-player-two",
      "type": "play-card",
    },
    {
      "participantId": "scenario-player-two",
      "target": {
        "kind": "hero",
        "participantId": "scenario-player-one",
      },
      "type": "use-hero-power",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-two",
      "type": "dev-set-mana",
    },
    {
      "cardId": "goblins_vs_gnomes_blingtron_3000",
      "participantId": "scenario-player-two",
      "type": "dev-add-card",
    },
    {
      "cardInstanceId": "scenario-player-two:dev:65",
      "participantId": "scenario-player-two",
      "position": 0,
      "type": "play-card",
    },
    {
      "cardId": "naxxramas_haunted_creeper",
      "participantId": "scenario-player-one",
      "type": "dev-summon-minion",
    },
    {
      "cardId": "naxxramas_nerubian_egg",
      "participantId": "scenario-player-one",
      "type": "dev-summon-minion",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-two",
      "type": "dev-set-mana",
    },
    {
      "cardId": "basic_flamestrike",
      "participantId": "scenario-player-two",
      "type": "dev-add-card",
    },
    {
      "cardInstanceId": "scenario-player-two:dev:75",
      "participantId": "scenario-player-two",
      "type": "play-card",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-two",
      "type": "dev-set-mana",
    },
    {
      "cardId": "basic_polymorph",
      "participantId": "scenario-player-two",
      "type": "dev-add-card",
    },
    {
      "cardInstanceId": "scenario-player-two:dev:87",
      "participantId": "scenario-player-two",
      "targets": [
        {
          "instanceId": "scenario-player-one:summoned:84",
          "kind": "minion",
          "participantId": "scenario-player-one",
        },
      ],
      "type": "play-card",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-two",
      "type": "dev-set-mana",
    },
    {
      "cardId": "basic_mind_control",
      "participantId": "scenario-player-two",
      "type": "dev-add-card",
    },
    {
      "cardInstanceId": "scenario-player-two:dev:88",
      "participantId": "scenario-player-two",
      "targets": [
        {
          "instanceId": "scenario-player-one:summoned:84",
          "kind": "minion",
          "participantId": "scenario-player-one",
        },
      ],
      "type": "play-card",
    },
    {
      "cardId": "basic_raid_leader",
      "participantId": "scenario-player-two",
      "type": "dev-summon-minion",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-two",
      "type": "dev-set-mana",
    },
    {
      "cardId": "classic_ice_barrier",
      "participantId": "scenario-player-two",
      "type": "dev-add-card",
    },
    {
      "cardInstanceId": "scenario-player-two:dev:90",
      "participantId": "scenario-player-two",
      "type": "play-card",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-two",
      "type": "dev-set-mana",
    },
    {
      "cardId": "league_of_explorers_raven_idol",
      "participantId": "scenario-player-two",
      "type": "dev-add-card",
    },
    {
      "cardInstanceId": "scenario-player-two:dev:92",
      "choice": 0,
      "participantId": "scenario-player-two",
      "type": "play-card",
    },
    {
      "cardInstanceId": "scenario-player-two:discover:93",
      "participantId": "scenario-player-two",
      "type": "choose-discover-card",
    },
    {
      "participantId": "scenario-player-two",
      "type": "end-turn",
    },
    {
      "participantId": "scenario-player-one",
      "type": "end-turn",
    },
    {
      "attacker": {
        "instanceId": "scenario-player-two:dev:65",
        "kind": "minion",
      },
      "defender": {
        "kind": "hero",
      },
      "participantId": "scenario-player-two",
      "type": "attack-character",
    },
    {
      "participantId": "scenario-player-two",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-two",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-two",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-two",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-two",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-two",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-two",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-two",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-two",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-two",
      "type": "dev-draw",
    },
    {
      "action": "destroy",
      "participantId": "scenario-player-two",
      "type": "dev-modify-deck",
    },
    {
      "participantId": "scenario-player-two",
      "type": "dev-draw",
    },
    {
      "action": "refill",
      "participantId": "scenario-player-two",
      "type": "dev-modify-deck",
    },
  ],
  "digests": {
    "checkpoints": "1542d8226ef7a4ec667678d061e285f1e402955cc7cc91bdb749bce282be028e",
    "commands": "27b804fe2b22d674637c2dbd70f541ddf2c71dbbe634aea3e12427dc0af3cbf7",
    "legality": "61135493b6bd1c50604562cbef0efa97adca8095e747ee7dc5c8f7786a6f0a4f",
    "publicEvents": "625d0c0b25f0a274ac39ef5792c64034861f7fae2b5d4e92079e97df8f945770",
    "publicState": "3f4049e5d65194a73583e008cc6eea66ade00aeb418b013f89797e8d524067d4",
    "results": "cb4149b158feec35587c55435c95091f1ad0d3c059cc54527c7b1d93131d82b2",
    "trace": "b7ba7cd87df2139919b98c0a5aaa635d1bd7e52fca9afc4e8c5e1feb2e846fb9",
  },
}
`;

exports[`opening match checkpoints > matches the seeded command, event, visibility, and checkpoint baseline > seed 314159 1`] = `
{
  "commands": [
    null,
    {
      "participantId": "scenario-player-one",
      "replaceInstanceIds": [
        "scenario-player-one:deck:22",
      ],
      "type": "confirm-mulligan",
    },
    {
      "participantId": "scenario-player-two",
      "replaceInstanceIds": [
        "scenario-player-two:deck:22",
      ],
      "type": "confirm-mulligan",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-one",
      "type": "dev-set-mana",
    },
    {
      "cardInstanceId": "missing",
      "participantId": "scenario-player-one",
      "type": "play-card",
    },
    {
      "participantId": "scenario-player-one",
      "target": {
        "kind": "hero",
        "participantId": "scenario-player-two",
      },
      "type": "use-hero-power",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-one",
      "type": "dev-set-mana",
    },
    {
      "cardId": "goblins_vs_gnomes_blingtron_3000",
      "participantId": "scenario-player-one",
      "type": "dev-add-card",
    },
    {
      "cardInstanceId": "scenario-player-one:dev:65",
      "participantId": "scenario-player-one",
      "position": 0,
      "type": "play-card",
    },
    {
      "cardId": "naxxramas_haunted_creeper",
      "participantId": "scenario-player-two",
      "type": "dev-summon-minion",
    },
    {
      "cardId": "naxxramas_nerubian_egg",
      "participantId": "scenario-player-two",
      "type": "dev-summon-minion",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-one",
      "type": "dev-set-mana",
    },
    {
      "cardId": "basic_flamestrike",
      "participantId": "scenario-player-one",
      "type": "dev-add-card",
    },
    {
      "cardInstanceId": "scenario-player-one:dev:75",
      "participantId": "scenario-player-one",
      "type": "play-card",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-one",
      "type": "dev-set-mana",
    },
    {
      "cardId": "basic_polymorph",
      "participantId": "scenario-player-one",
      "type": "dev-add-card",
    },
    {
      "cardInstanceId": "scenario-player-one:dev:87",
      "participantId": "scenario-player-one",
      "targets": [
        {
          "instanceId": "scenario-player-two:summoned:84",
          "kind": "minion",
          "participantId": "scenario-player-two",
        },
      ],
      "type": "play-card",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-one",
      "type": "dev-set-mana",
    },
    {
      "cardId": "basic_mind_control",
      "participantId": "scenario-player-one",
      "type": "dev-add-card",
    },
    {
      "cardInstanceId": "scenario-player-one:dev:88",
      "participantId": "scenario-player-one",
      "targets": [
        {
          "instanceId": "scenario-player-two:summoned:84",
          "kind": "minion",
          "participantId": "scenario-player-two",
        },
      ],
      "type": "play-card",
    },
    {
      "cardId": "basic_raid_leader",
      "participantId": "scenario-player-one",
      "type": "dev-summon-minion",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-one",
      "type": "dev-set-mana",
    },
    {
      "cardId": "classic_ice_barrier",
      "participantId": "scenario-player-one",
      "type": "dev-add-card",
    },
    {
      "cardInstanceId": "scenario-player-one:dev:90",
      "participantId": "scenario-player-one",
      "type": "play-card",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-one",
      "type": "dev-set-mana",
    },
    {
      "cardId": "league_of_explorers_raven_idol",
      "participantId": "scenario-player-one",
      "type": "dev-add-card",
    },
    {
      "cardInstanceId": "scenario-player-one:dev:92",
      "choice": 0,
      "participantId": "scenario-player-one",
      "type": "play-card",
    },
    {
      "cardInstanceId": "scenario-player-one:discover:93",
      "participantId": "scenario-player-one",
      "type": "choose-discover-card",
    },
    {
      "participantId": "scenario-player-one",
      "type": "end-turn",
    },
    {
      "participantId": "scenario-player-two",
      "type": "end-turn",
    },
    {
      "attacker": {
        "instanceId": "scenario-player-one:dev:65",
        "kind": "minion",
      },
      "defender": {
        "kind": "hero",
      },
      "participantId": "scenario-player-one",
      "type": "attack-character",
    },
    {
      "participantId": "scenario-player-one",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-one",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-one",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-one",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-one",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-one",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-one",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-one",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-one",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-one",
      "type": "dev-draw",
    },
    {
      "action": "destroy",
      "participantId": "scenario-player-one",
      "type": "dev-modify-deck",
    },
    {
      "participantId": "scenario-player-one",
      "type": "dev-draw",
    },
    {
      "action": "refill",
      "participantId": "scenario-player-one",
      "type": "dev-modify-deck",
    },
  ],
  "digests": {
    "checkpoints": "e05997724b3c654082b79334c65cd7dc497cfde33fbb05f7926df03c64952aa0",
    "commands": "1df3500ff667fe5e400400a3846fef06b20472bb50e02d546cdda1d90574a273",
    "legality": "1c72db1e9f70d9744a25e76c03596655c5cdea213c4fb80a5c3d42b1db454d91",
    "publicEvents": "d40dda60c2daeb3176090b99965f959836a6f2fd00c8f011621f2888db67ca3f",
    "publicState": "c0b0d97c0f3623b39f473bf5683d5a11f2558a880203054e653785fa94173360",
    "results": "0b13c8caa455d87d7184f5a8cdd42bc72fa7249e4e5cc753619e00af7652b8bd",
    "trace": "5ab8377d67f7b6790dd00676e57479e2fc4209b4970e09a8cd651f4da43277c3",
  },
}
`;
